# secboot

./: README.md  pyproject.toml  secboot.py  setup.sh
pacman/: 50-fwupd-update.hook  60-secboot-kernel-removal.hook  90-secboot-kernel-update.hook
secboot/: main.py
